--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
  
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 0 0% 98%;
     --foreground: 222.2 84% 4.9%;
  
     --muted: 210 40% 96.1%;
@@ -34,6 +34,7 @@
     --ring: 215 20.2% 65.1%;
  
     --radius: 0.5rem;
+    --pomo-card: 0 0% 100%;
   }
  
   .dark {
@@ -65,6 +66,7 @@
     --destructive-foreground: 0 85.7% 97.3%;
  
     --ring: 217.2 32.6% 17.5%;
+    --pomo-card: 228 23% 16%;
   }
 }
  
